--- a/top.html
+++ b/top.html
@@ -8,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>FLT Limited</title>
 
-<link rel="stylesheet" href="./css/home.css" type="text/css">
+<link rel="stylesheet" href="./css/home.css" type="text/css" media="screen and (min-width: 901px)">
 <link rel="stylesheet" href="./css/home900px.css" type="text/css" media="screen and (max-width: 900px)">
 
 
