test for linking to vscode

--- a/service/service-FLEX_J.html
+++ b/service/service-FLEX_J.html
@@ -71,23 +71,23 @@
       </div>
         <div class="service">
         <div class="content1">
-            <div class="icon"> <a href="IT/flexbox/IT serviceFLEX.html" class="just-be-fit"><div class="transp-box"><img src="img/ss.jpg" class="icon-size slide-left"></div></a></div>
+            <div class="icon"> <a href="IT/flexbox/IT serviceFLEX_J.html" class="just-be-fit"><div class="transp-box"><img src="img/ss.jpg" class="icon-size slide-left"></div></a></div>
             <div><p class="service-name slide-top">ITサービス</p>
                 <p class="service-intro slide-top">データ入力などの簡易作業をアウトソースして、売上に繋がる仕事に専念したいご希望に弊社は叶えられます。必要な時に必要だけの仕事を依頼して、商売機会を逃さないように時間を効率的にお使いできます。</p></div>
         </div class="content1">
         <div class="content2">
-          <div class="icon"> <a href="secretary/secretary.html" class="just-be-fit"><div class="transp-box"><img src="img/SC.jpg" class="icon-size slide-left"></div></a></div> 
+          <div class="icon"> <a href="secretary/secretary_J.html" class="just-be-fit"><div class="transp-box"><img src="img/SC.jpg" class="icon-size slide-left"></div></a></div> 
             <div><p class="service-name slide-top2">秘書サービス</p>
                 <p class="service-intro slide-top2">ビジネスからプライベートまで、あらゆるお困りごとに対応致します。
                   お客様ご自身のビジネスに集中できるようにお手伝い致します。多言語によるサポートが可能です。</p></div>
          </div class="content2">
         <div class="content3">
-          <div class="icon"> <a href="cleaning/pika.html" class="just-be-fit"><div class="transp-box"><img src="img/clean.jpg" class="icon-size slide-right"></div></a></div>
+          <div class="icon"> <a href="cleaning/pika_J.html" class="just-be-fit"><div class="transp-box"><img src="img/clean.jpg" class="icon-size slide-right"></div></a></div>
             <div><p class="service-name slide-top3">家事代行サービス</p>
                 <p class="service-intro slide-top3">日本を離れ不安を抱える日本人のお客様、ご家族様の生活をお手伝いしたいと思い立ち上げたプロジェクトです。どんな些細な事からでもご相談ください。</p></div>
         </div class="content3">
         <div class="content4">
-          <div class="icon"> <a href="CS/CS.html" class="just-be-fit"><div class="transp-box"><img src="img/CS.jpg" class="icon-size slide-right"></div></a></div>
+          <div class="icon"> <a href="CS/CS_J.html" class="just-be-fit"><div class="transp-box"><img src="img/CS.jpg" class="icon-size slide-right"></div></a></div>
             <div><p class="service-name slide-top4">カスタマーサポート</p>
                 <p class="service-intro slide-top4">事業で発生するカスタマーサポート業務を当社の日本人スタッフがプロフェッショナルな意識を持って対応いたします。</p></div>
         </div class="content4">
