--- a/service/secretary/secretary.html
+++ b/service/secretary/secretary.html
@@ -93,7 +93,7 @@
   responding applicants
  communicating with candidates
  managing interview schedule
- onboarding and retirement procedure
+ onboarding & retirement procedure
  attendance management
  document preparation 
   (such as applications)
@@ -117,7 +117,7 @@
 				<pre class="service">
  document preparation 
   (such as applications)
- receiving calls and calling in work
+ receiving calls & calling in work
  emailing and issuing letters</pre>
 			</div>
 		</div>
